--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -21,12 +21,12 @@ library(janitor)
 
 # Reading in actual recent data
 
-most_recent <- readRDS('most_recent_zip_nobanks_1118.rds') %>%
+most_recent <- readRDS('most_recent_zip_nobanks_1129.rds') %>%
   mutate(log_days = log(business_days + 1)) %>%
   mutate(fips = as.factor(fips), lender = as.factor(lender),
          state = as.factor(state))
 
-most_recent_county <- readRDS('most_recent_county_nobanks_1118.rds') %>%
+most_recent_county <- readRDS('most_recent_county_nobanks_1130.rds') %>%
   mutate(lender = as.factor(lender))
 
 # Reading most_recent_both later
@@ -111,35 +111,35 @@ combined_unemploy2 <- left_join(combined_unemploy,
 ```{r}
 # covid -- app open
 
-county_covid <- read_csv('raw_data/covid/us-counties.csv') %>%
-  filter(date > as.Date("2020-03-27")) %>%
-  select(date, fips, cases, deaths)
-
-current_cases <- county_covid %>%
-  filter(date <= as.Date("2020-04-03")) %>%
-  group_by(fips) %>%
-  summarize(cases = mean(cases), deaths = mean(deaths), .groups = "drop")
-
-combined_covid_curr <- left_join(combined_unemploy2, current_cases, by = "fips") %>%
-  mutate(mean_start_cases = cases * 10000/population,
-         mean_start_deaths = deaths * 10000/population) %>%
-  select(-cases, -deaths) %>%
-  drop_na(mean_start_cases, mean_start_deaths)
-
-dates_approved <- combined_covid_curr %>%
-  select(date_approved, fips) %>%
-  distinct()
-
-temp <- left_join(dates_approved, county_covid, by = "fips") %>%
-  filter(date >= date_approved - 6, date <= date_approved) %>%
-  group_by(fips) %>%
-  summarize(mean_end_cases = mean(cases), mean_end_deaths = mean(deaths),
-            .groups = "drop")
-
-combined_covid <- left_join(combined_covid_curr, temp, by = "fips") %>%
-  drop_na(mean_end_cases, mean_end_deaths) %>%
-  mutate(mean_end_cases = mean_end_cases * 10000/population, 
-         mean_end_deaths = mean_end_deaths * 10000/population)
+# county_covid <- read_csv('raw_data/covid/us-counties.csv') %>%
+#   filter(date > as.Date("2020-03-27")) %>%
+#   select(date, fips, cases, deaths)
+# 
+# current_cases <- county_covid %>%
+#   filter(date <= as.Date("2020-04-03")) %>%
+#   group_by(fips) %>%
+#   summarize(cases = mean(cases), deaths = mean(deaths), .groups = "drop")
+# 
+# combined_covid_curr <- left_join(combined_unemploy2, current_cases, by = "fips") %>%
+#   mutate(mean_start_cases = cases * 10000/population,
+#          mean_start_deaths = deaths * 10000/population) %>%
+#   select(-cases, -deaths) %>%
+#   drop_na(mean_start_cases, mean_start_deaths)
+# 
+# dates_approved <- combined_covid_curr %>%
+#   select(date_approved, fips) %>%
+#   distinct()
+# 
+# temp <- left_join(dates_approved, county_covid, by = "fips") %>%
+#   filter(date >= date_approved - 6, date <= date_approved) %>%
+#   group_by(fips) %>%
+#   summarize(mean_end_cases = mean(cases), mean_end_deaths = mean(deaths),
+#             .groups = "drop")
+# 
+# combined_covid <- left_join(combined_covid_curr, temp, by = "fips") %>%
+#   drop_na(mean_end_cases, mean_end_deaths) %>%
+#   mutate(mean_end_cases = mean_end_cases * 10000/population, 
+#          mean_end_deaths = mean_end_deaths * 10000/population)
 
 ```
 
@@ -352,10 +352,7 @@ interactions <- felm(
 
 ```{r}
 
-
-# county data
-
-most_recent_both <- readRDS('most_recent_zip_withcounties_nobanks_1118.rds') %>%
+most_recent_both <- readRDS('most_recent_zip_withcounties_nobanks_1130.rds') %>%
   mutate(zip = as.factor(zip), fips = as.factor(fips))
 
 # Robustness check -- rerunning regressions with the lovely local data
@@ -369,7 +366,7 @@ demographics_check <- felm(business_days ~ 1 +
     cook_pvi + 
     rural +
     estimate_gini_index +
-    county_crime_rate|0|0|zip + fips, data = most_recent_both)
+    county_crime_rate|0|0|zip, data = most_recent_both)
 
 # Regression 2: Demographics and Loan-Specific
 
@@ -389,7 +386,7 @@ loan_spec_check <- felm(
     loan_1mil_2mil +
     loan_2mil_5mil + 
     loan_5mil_10mil + 
-    jobs_reported|lender|0|zip + fips, data = most_recent_both)
+    jobs_reported|lender|0|zip, data = most_recent_both)
 
 # Regression 3: economics
 
@@ -414,7 +411,7 @@ econ_check <- felm(
     businesses_per_pop + 
     payroll +
     county_unemployment_rate_apr + 
-    county_unemployment_rate|lender|0|zip + fips, data = most_recent_both)
+    county_unemployment_rate|lender|0|zip, data = most_recent_both)
 
 # Regression 4: COVID 
 
@@ -447,7 +444,7 @@ covid_check <- felm(
     stay_at_home_apr + 
     stay_at_home_current + 
     non_essential_closure_apr + 
-    non_essential_closure_current|lender|0|zip + fips,
+    non_essential_closure_current|lender|0|zip,
   data = most_recent_both)
 
 # Regression 5: squared
@@ -482,7 +479,7 @@ sq_check <- felm(
     stay_at_home_current + 
     non_essential_closure_apr + 
     non_essential_closure_current +
-    I(minority_percent^2)|lender|0|zip + fips,
+    I(minority_percent^2)|lender|0|zip,
   data = most_recent_both)
 
 # Regression 6: interactions
@@ -522,7 +519,7 @@ interactions_check <- felm(
     I(minority_percent * cook_pvi) +
     I(minority_percent * rural) + 
     I(minority_percent * estimate_gini_index) +
-    I(minority_percent * county_crime_rate)|lender|0|zip + fips,
+    I(minority_percent * county_crime_rate)|lender|0|zip,
   data = most_recent_both)
 ```
 
@@ -1085,6 +1082,7 @@ log_interactions <- felm(log_days ~
 
 # Robustness check -- using state FEs instead of county FEs
 
+
 covid_state <- felm(
   business_days ~ 1 + 
     median_family_income + 
@@ -1110,7 +1108,7 @@ covid_state <- felm(
     mean_start_cases_weighted +
     mean_start_deaths_weighted + 
     mean_end_cases_weighted +
-    mean_end_deaths_weighted|state + lender + fips|0|zip,
+    mean_end_deaths_weighted|state + lender|0|zip,
   data = most_recent)
 
 # Regression 5: Squared
@@ -1179,7 +1177,6 @@ interactions_state <- felm(
     I(minority_percent * estimate_gini_index) +
     I(minority_percent * violent_crime_rate)|state + lender|0|zip,
   data = most_recent)
-
 ```
 
 ```{r}
